[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-kerq"
version = "0.1.0"
description = "LangChain integration for Kerq trust scoring and telemetry"
authors = ["Kerq <hello@kerq.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://kerq.dev"
repository = "https://github.com/greenoriginals/langchain-kerq"
documentation = "https://kerq.dev/docs"
keywords = ["langchain", "mcp", "trust", "security", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "langchain_kerq"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = ">=1.0.0,<2.0.0"
httpx = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-mock = ">=3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
